// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";

package proto;

option java_package = "com.hedera.pbj.test.proto.java";
option java_multiple_files = true;
// <<<pbj.java_package = "com.hedera.pbj.test.proto.pbj">>> This comment is special code for setting PBJ Compiler java package

/**
 * Sample protobuf containing bytes.
 */
message MessageWithBytes {
  bytes bytesField = 1;
}

/**
 * Sample protobuf with MessageWithBytes as a oneof child message field.
 */
message MessageWithBytesWrapper {
  oneof message_valid {
    MessageWithBytes messageWithBytes = 1;
    bool valid = 2;
  }
}