// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";

package proto;

option java_package = "com.hedera.pbj.test.proto.java";
option java_multiple_files = true;
// <<<pbj.java_package = "com.hedera.pbj.test.proto.pbj">>> This comment is special code for setting PBJ Compiler java package

/**
 * Sample protobuf containing bytes and string.
 * This model MUST include the same fields as MessageWithBytes, plus some extra "unknown" fields.
 */
message MessageWithBytesAndString {
  bytes bytesField = 1;
  string stringField = 2;
}
